<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelCreatorActivity"
    android:gravity="start"
    android:background="@color/primary_dark_blue_background"
    android:orientation="vertical">

    <include layout="@layout/action_bar"
        android:id="@+id/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">


        <include
            android:id="@+id/obj_question_element"
            layout="@layout/lvl_creator_question_element" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_SaveQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lvl_creator_save_question"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/custom_button_green"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_PreviousQuestion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lvl_creator_prev_question"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:padding="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_UpdateQuestion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lvl_creator_update_question"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/custom_button"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_NextQuestion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/lvl_creator_next_question"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:padding="5dp"
                android:background="@drawable/custom_button"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lvl_creator_upload_topic_to_the_server"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</LinearLayout>