<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsProtoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        tools:ignore="UselessParent">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/common"
        android:textSize="22sp"
        android:text="@string/question_placeholder"/>

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/iv_question_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_questionmark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="15dp">

        <ProgressBar
            android:id="@+id/ll_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="3"
            android:minHeight="50dp"
            android:progress="0"
            android:indeterminate="false"/>

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textColorHint="@color/common"
            android:textSize="14sp"
            android:text="@string/progress"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_optionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColorHint="@color/common"
            android:textSize="18sp"
            tools:text="Apple" />

        <TextView
            android:id="@+id/tv_optionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColorHint="@color/common"
            android:textSize="18sp"
            tools:text="Banana" />

        <TextView
            android:id="@+id/tv_optionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColorHint="@color/common"
            android:textSize="18sp"
            tools:text="Cherry" />

        <TextView
            android:id="@+id/tv_optionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColorHint="@color/common"
            android:textSize="18sp"
            tools:text="Dragon Fruit" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#303030"
            android:text="@string/answer"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>